cabal-version:  1.12
name:           delta-stepping
version:        0.1.0.0
author:         INFOB3CC lecturers
license:        BSD3
license-file:   LICENSE
build-type:     Simple

library
  exposed-modules:
      DeltaStepping
      Sample
      Utils
  hs-source-dirs: src
  ghc-options:
      -O2
      -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields
  build-depends:
      base >=4.17 && <5
    , atomic-primops
    , containers
    , directory
    , fgl
    , fgl-visualize
    , filepath
    , primitive
    , process
    , stm
    , vector
  default-language: Haskell2010

executable delta-stepping-test
  main-is: Main.hs
  other-modules:
      Test.Gen
      Test.Similar
  hs-source-dirs: test
  ghc-options:
      -O2
      -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields
      -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T
  build-depends:
      base >=4.17 && <5
    , containers
    , delta-stepping
    , directory
    , fgl
    , fgl-visualize
    , filepath
    , hedgehog
    , primitive
    , process
    , stm
    , tasty >=1.2.2
    , tasty-bench >=0.3.2
    , tasty-hedgehog
    , vector
  default-language: Haskell2010
